@@ -543,6 +543,8 @@ if test "$with_dln_a_out" != yes; then
 			rb_cv_dlopen=yes;;
 	sysv4*) 	LDSHARED='ld -G'
 			rb_cv_dlopen=yes;;
+        nto-qnx*)       LDSHARED="qcc -shared"
+                        rb_cv_dlopen=yes ;;
 	esix*|uxpds*) 	LDSHARED="ld -G"
 			rb_cv_dlopen=yes ;;
 	osf*) 		LDSHARED="$CC -shared"
